# plane

./: 2.qml  Actions.qml  BlueGameOver.qml  CMakeLists.txt  Content.qml  Content_BACKUP_32391.qml  Content_LOCAL_37161.qml  Control.js  Controller.js  CreatRoom.qml  Dialogs.qml  FirstWindow.qml  GameMap.qml  GreenGameOver.qml  Greenover.qml  JoinRoom.qml  MainMap.qml  MapRectangle.qml  MapSquare.qml  MusicPlay.qml  OrangeGameOver.qml  Plane.qml  PlaneController.js  RedGameOver.qml  SecondWindow.qml  Triangle.qml  TriangleLeft.qml  Window.qml  client.cpp  client.h  connect.cpp  connect.h  imges.qrc  main.cpp  server.cpp  server.h  文本文件.txt  飞行棋用户使用文档.docx
